--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="/tutor/lessons">Stunden-Übersicht</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tutor/edit_tutor">Fächer anzeigen</a>
+                    <a class="nav-link" href="/tutor/edit_tutor">Tutor Profil</a>
                 </li>
             </ul>
         </div>
