--- a/templates/admin_finances.html
+++ b/templates/admin_finances.html
@@ -157,7 +157,7 @@
                                     <th onclick="sortTable(5)">Rabatt</th>
                                     <th onclick="sortTable(6)">Endpreis</th>
                                     <th onclick="sortTable(7)">Tutorzahlung</th>
-                                    <th onclick="sortTable(8)">Bruttolohn</th>
+                                    <th onclick="sortTable(8)">Bruttogewinn</th>
                                 </tr>
                             </thead>
                             <tbody>
