--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
 
     <!-- Hauptinhalt -->
     <div class="header">
-        <h1>Willkommen bei Fit4School Bern</h1>
+        <h1>Willkommen bei fit4school Bern</h1>
         <p>Ihr Partner für professionelle Nachhilfe und Prüfungsvorbereitung</p>
     </div>
 
