--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -98,6 +98,7 @@
                 <label for="final_price">Endpreis</label>
                 <input type="number" step="0.01" class="form-control" id="final_price" name="final_price" value="{{ lesson.final_price }}" required>
             </div>
+            <a href="{{ url_for('add_lesson', lesson_id=lesson.lesson_id) }}" class="btn btn-primary">Add Lesson</a>
             <button class="btn btn-danger" onclick="deleteLesson(event, {{ lesson.lesson_id }})">Delete Lesson</button>
             {% endif %}
             <button type="submit" class="btn btn-primary">Lektion aktualisieren</button>
