--- a/templates/modify_family.html
+++ b/templates/modify_family.html
@@ -90,9 +90,19 @@
                         <li class="list-group-item">
                             {{ student.FirstName }} {{ student.LastName }}   |   {{ student.DateOfBirth }}     |    {{ student.phone_num }}
                             <a href="{{ url_for('edit_student', student_id=student.StudentID) }}" class="btn btn-secondary btn-sm">Schüler bearbeiten</a>
+                            <form method="POST" action="{{ url_for('delete_student', student_id=student.StudentID) }}" style="display: inline;">
+                                <button type="submit" class="btn btn-danger btn-sm">Schüler löschen</button>
+                            </form>
                         </li>
                         {% endfor %}
                     </ul>
+                    {% if family.students %}
+                        <button class="btn btn-danger btn-sm mt-2" disabled>Familie löschen</button>
+                    {% else %}
+                        <form method="POST" action="{{ url_for('delete_family', family_id=family.id) }}">
+                            <button type="submit" class="btn btn-danger btn-sm mt-2">Familie löschen</button>
+                        </form>
+                    {% endif %}
                 </div>
             </li>
             {% endfor %}
